Useless java7 options were removed.